child/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: child
spec:
  ports:
  - port: 80
    targetPort: http
